fix: исправил миграцию, дополнил security, рефакторинг